Cambio de prueba al código inicial

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <h1> Esta es mi primera página con GitHub Pages </h1>
+<p> Le hice un pequeño cambio al código para probar qué pasa Si </p>
 <p>¡Gracias GitHub!</p>
 </html>
